@@ -49,12 +49,12 @@ int vfsub_update_h_iattr(struct path *h_path, int *did)
 
 /* ---------------------------------------------------------------------- */
 
-struct file *vfsub_dentry_open(struct path *path, int flags,
-			       const struct cred *cred)
+struct file *vfsub_dentry_open(struct path *path, int flags)
 {
 	struct file *file;
 
-	file = dentry_open(path->dentry, path->mnt, flags, cred);
+	path_get(path);
+	file = dentry_open(path->dentry, path->mnt, flags, current_cred());
 	if (IS_ERR(file))
 		return file;
 	/* as NFSD does, just call ima_..._get() simply after dentry_open */
